# a-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  mazegen-1.0.0-py3-none-any.whl  mazegenerator.py  parser.py  pyproject.toml  requirements.txt
mazegen/: __init__.py  mazegenerator.py  parser.py
