[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A maze generator library"
requires-python = ">=3.10"
dependencies = [
	"mypy>=1.20.1",
	"flake8>=7.3.0",
	"pydantic>=2.13.3",
	"build>=1.4.4",
]
authors = [{name = "romgutie"}, {name = "yflohic"}]

[tool.setuptools]
py-modules = ["mazegenerator"]
